--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Hangfire" : "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "Person": {
+        "Name": "Fikus",
+        "Age": 18
     }
-  },
-  "AllowedHosts": "*"
 }
